# rhine-discord

./: Example.hs  config.dhall  flake.nix  rhine-discord.cabal
src/FRP/Rhine/: Discord.hs
